--- a/package.json
+++ b/package.json
@@ -39,11 +39,13 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "css-loader": "^6.7.3",
     "mini-css-extract-plugin": "^2.7.2",
     "node-sass": "^7.0.3",
-    "sass-loader": "^13.2.0",
     "sass": "^1.57.1",
-    "style-loader": "^3.3.1"
+    "sass-loader": "^13.2.0",
+    "style-loader": "^3.3.1",
+    "tailwindcss": "^3.2.7"
   }
 }
