--- a/package.json
+++ b/package.json
@@ -2,17 +2,24 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "proxy":"https://pwcdemo.eastus.cloudapp.azure.com/magentodefault/graphql",
   "dependencies": {
+    "@apollo/client": "^3.7.10",
+    "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
+    "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^6.8.1",
     "react-scripts": "^5.0.1",
     "react-select": "^5.7.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
